--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
   </head>
   <body>
     <h1>Memory Game:<br />Halloween Edition😱</h1>
     <div class="hero">
-      <audio src="/music/alien.mp3" autoplay loop></audio>
+      <audio src="/music/alien_atmosfear.mp3" autoplay loop></audio>
       <h3>Tries:<span class="playerLivesCount"></span></h3>
     </div>
     <section></section>
