--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <h1>Memory Game:<br />Halloween Edition😱</h1>
     <div class="hero">
-      <audio src="alien_fear.mp3" autoplay loop></audio>
+      <audio src="alien_fear.mp3" controls loop></audio>
       <h3>Tries:<span class="playerLivesCount"></span></h3>
     </div>
     <section></section>
