--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
     <h1>Memory Game:<br />Halloween Edition😱</h1>
     <div class="hero">
-      <audio src="alien_fear.mp3" autoplay loop></audio>
+      <audio src="music.mp3" autoplay loop></audio>
       <h3>Tries:<span class="playerLivesCount"></span></h3>
     </div>
     <section></section>
     <footer>
       <p>
-        Music by <a href="http://spookysoundtrack.com/">Spooky Sound Track</a>
+        Music by<a href="https://www.chosic.com/free-music/all"
+          >Loyalty Freak Music</a
+        >
       </p>
       <p>Images provided by <a href="http://unsplash.com">Unsplash</a></p>
     </footer>
