Added music controls

--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
       href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
     <h1>Memory Game:<br />Halloween Edition😱</h1>
     <div class="hero">
-      <audio src="music.mp3" autoplay loop></audio>
       <h3>Tries:<span class="playerLivesCount"></span></h3>
     </div>
     <section></section>
+
     <footer>
+      <div class="music">
+        <figure>
+          <audio src="music.mp3" controls loop></audio>
+          <figcaption>Spooky music</figcaption>
+        </figure>
+      </div>
       <p>
         Music by<a href="https://www.chosic.com/free-music/all"
           >Loyalty Freak Music</a
