--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
