Added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>👻Halloween Memory Game👻</title>
+    <meta name="description" property="og:description" content="Halloween memory card game" />
+    <meta name="image" property="og:image" content="https://jasmine582.github.io/halloween_memory_game/images/michael_myers.jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
